# nocfo-ai-toolkit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tmp_mcp_document_validation_report.json  Dockerfile  MCP_AUTHENTICATION.md  README.md  SKILL.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml  publish-to-pypi.yaml  release.yaml
scripts/: build-and-push-to-ecr.sh  deploy.py  generate_cli_commands.py  release-publish.sh
src/nocfo_toolkit/: __init__.py  api_client.py  config.py  openapi.py
src/nocfo_toolkit/cli/: app.py  context.py  output.py
src/nocfo_toolkit/cli/commands/: _helpers.py  accounts.py  auth.py  businesses.py  contacts.py  documents.py  files.py  invoices.py  products.py  purchase_invoices.py  reports.py  schema.py  tags.py  user.py
src/nocfo_toolkit/mcp/: __init__.py  auth.py  contract_validation.py  error_handling.py  http_error_capture.py  invoice_app.py  middleware.py  search.py  server.py  tool_access.py
src/nocfo_toolkit/mcp/curated/: __init__.py  batch.py  client.py  (+7 more)
tests/: __init__.py  test_cli.py  test_config.py  test_curated_attachments.py  test_curated_batch.py  test_curated_bulk_edit.py  test_curated_contact_payload.py  test_curated_document_payload.py  test_curated_file_upload.py  test_curated_files.py  test_curated_relation_update.py  test_curated_reporting.py  test_curated_sales_invoice_payload.py  test_mcp_auth.py  test_mcp_contract_validation.py  test_mcp_error_handling.py  test_mcp_filesystem_provider.py  test_mcp_search.py  test_mcp_server.py  test_openapi.py
(+33 files in other folders)
