[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nocfo-cli"
version = "0.1.0"
description = "NoCFO CLI, MCP server, and Cursor skill toolkit."
authors = ["NoCFO"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "nocfo_toolkit", from = "src" }
]
keywords = ["nocfo", "cli", "mcp", "fastmcp", "accounting", "invoicing"]

[tool.poetry.urls]
Homepage = "https://nocfo.io"
Documentation = "https://api-prd.nocfo.io/docs"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastmcp = ">=2.0"
httpx = ">=0.27"
typer = ">=0.12"
rich = ">=13.0"
python-dotenv = ">=1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pre-commit = ">=4.0"
ruff = ">=0.1.7"

[tool.poetry.scripts]
nocfo = "nocfo_toolkit.cli.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
